# msg

auto_return_msgs/: CMakeLists.txt  package.xml
auto_return_msgs/msg/: auto_return.msg
chassis_msgs/: CMakeLists.txt  package.xml
chassis_msgs/msg/: jingpinChassis.msg
control_msgs/: CMakeLists.txt  package.xml
control_msgs/msg/: GetECUReport.msg  SendECUCmd.msg
obstacle_msgs/: CMakeLists.txt  package.xml
obstacle_msgs/msg/: FusionMap.msg
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: InsInfo.msg  Localization.msg  detectedObjectArray.msg
plan2control_msgs/: CMakeLists.txt  package.xml
plan2control_msgs/msg/: Traj_Node.msg
planning_msgs/: CMakeLists.txt  package.xml
planning_msgs/msg/: controlpoint.msg  trajectory.msg  trajectorypoint.msg
serial_msgs/: CMakeLists.txt  package.xml
serial_msgs/msg/: rs232.msg
