<?xml version="1.0"?>
<package>
  <name>serial_msgs</name>
  <version>0.0.1</version>
  <description>message for serial</description>
  <maintainer email="477942461@qq.com">tigerxiang</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
	<run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
